--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -18,6 +18,21 @@
 .negative
   color = !negative_color
   
+div.message.success
+  cursor: pointer
+  
+noscript, #fourohfour, #fivehundred
+  .error
+    margin: 100px auto
+    padding: 75px 50px
+    width: 50%
+    -moz-border-radius: 25px
+    -webkit-border-radius: 25px
+    background-color: #FFFFFF
+    border-color: #000000
+    span
+      font-size: 3em
+  
 // Tooltip --------------------------------------------------------------------
 #tooltip
   position: absolute
@@ -27,6 +42,7 @@
   background-color = !notice_background
   padding: 5px
   -moz-border-radius: 5px
+  -webkit-border-radius: 5px
 }
 #tooltip 
   h3, div
@@ -36,7 +52,7 @@
     font-size: 1em
     
 // Index#index
-body#index
+body#index_root
   .record_group
     min-width: 317px
     display: block
@@ -46,7 +62,7 @@ body#index
       margin: 4px 0 4px 0
     
 // Members#show ---------------------------------------------------------------
-body#members
+body#members_root
   #member_stats
     text-align: center
     h3
@@ -64,7 +80,7 @@ body#members
         font-size: 0.85em
     
 // Raids#show -----------------------------------------------------------------
-body#raids
+body#raids_root
   #attendees
     h4
       font-weight: bold
@@ -115,6 +131,47 @@ body#raids
             float: right
   #drops
     clear: left
+
+// Context Menus --------------------------------------------------------------
+.contextMenu
+  position: absolute
+  width: 120px
+  z-index: 99999
+  border: solid 1px #CCC
+  background: #EEE
+  padding: 0px
+  margin: 0px
+  display: none
+
+  li
+    list-style: none
+    padding: 0px
+    margin: 0px
+    &.hover a
+      color: #FFF
+      background-color: #3399FF
+    &.disabled a
+      color: #AAA
+      cursor: default
+    &.hover.disabled a
+      background-color: transparent
+    &.separator
+      border-top: solid 1px #CCC
+    &.edit a
+      background-image: url(/images/edit.png)
+    &.delete a
+      background-image: url(/images/delete.png)
+  a
+    color: #333
+    text-decoration: none
+    display: block
+    line-height: 20px
+    height: 20px
+    background-position: 6px center
+    background-repeat: no-repeat
+    outline: none
+    padding: 1px 5px
+    padding-left: 28px
     
 // Forms ----------------------------------------------------------------------
 @import formtastic_base.sass
@@ -233,6 +290,7 @@ div.pagination
     padding: 4px 7px
     text-decoration: none
     -moz-border-radius: 3px
+    -webkit-border-radius: 3px
     background: #E4E4E4 url(http://www.juggernautguild.com/public/style_images/splat/page.png) repeat-x scroll 0 50%
     float: left
     font-size: 0.9em
@@ -272,6 +330,10 @@ span.progress
   .ui-tabs-nav
     li.ui-tabs-selected
       background-color: #cd5316
+      font-weight: bold
+      -moz-border-radius: 3px 3px 0 0
+      -webkit-border-top-left-radius: 3px
+      -webkit-border-top-right-radius: 3px
       a
         color: #FFFFFF
   // Hidden tab content
