--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -29,7 +29,7 @@
             %tr{ :class => cycle('row1', 'row2') + ' ' + loot_row_classes(loot) }[loot]
               %td.date= link_to h(loot.purchased_on), raid_path(loot.raid_id) unless loot.raid_id.nil?
               %td.member= link_to_member(loot.member)
-              %td.note= loot_tell_types(loot)
+              %td.note.item= loot_tell_types(loot)
               %td.number= loot_factor(loot.adjusted_price)
     #t-wishlists
       %table.ipb_table
