--- a/app/views/raids/show.html.haml
+++ b/app/views/raids/show.html.haml
@@ -30,7 +30,7 @@
     %tbody#itemfilter
       - @loots.each do |loot|
         %tr{ :class => cycle('row1', 'row2') + ' ' + loot_row_classes(loot) }[loot]
-          %td[loot.item]= link_to_item_with_stats(loot.item)
+          %td= link_to_item_with_stats(loot.item)
           %td.member= link_to_member(loot.member)
           %td= loot_tell_types(loot)
           %td.number= loot_factor(loot.adjusted_price)
