Goodbye context menus!
- Instead of the maintitle helper, just render a partial as needed.
- Use IPB3's inline topic moderation, and render it as a partial where needed.
- Move the Javascript that's called on every page into a JS file, instead of a :javascript block in the layout.

--- a/app/views/achievements/index.html.haml
+++ b/app/views/achievements/index.html.haml
@@ -4,7 +4,7 @@
   });
 - breadcrumb 'Achievements'
 %div.category_block.block_wrap
-  = maintitle
+  = render :partial => 'shared/maintitle'
   %table.ipb_table
     %thead
       %tr
