--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -1,6 +1,6 @@
 - breadcrumb 'Index'
 %div.category_block.block_wrap
-  = maintitle('Overview')
+  = render :partial => 'shared/maintitle', :object => 'Overview'
   %table.ipb_table
     %thead
       %tr
@@ -49,6 +49,6 @@
           %td.number= loot_factor(group.avg_sitlf.to_f)
 
 %div.category_block.block_wrap
-  = maintitle('Records')
+  = render :partial => 'shared/maintitle', :object => 'Records'
   - @stat_groups.each do |arr|
     .record_group= render :partial => "index/#{arr[0]}", :object => arr[1]
