--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,8 +1,7 @@
 - breadcrumb 'Items'
-= render :partial => 'items/context_menu' if admin?
 = will_paginate @items
 %div.category_block.block_wrap
-  = maintitle
+  = render :partial => 'shared/maintitle'
   %table.ipb_table
     %thead
       %tr
@@ -12,7 +11,9 @@
     %tbody
       - @items.each do |item|
         %tr{ :class => cycle('row1', 'row2') }[item]
-          %td.item= link_to_item_with_stats(item)
+          %td.item
+            = link_to_item_with_stats(item)
+            = render :partial => 'shared/moderation', :object => item if admin?
           %td= h(item.loots.size)
           %td= h(item.wishlists.size)
 = will_paginate @items
