--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,8 +8,8 @@
     = stylesheet_link_tag 'http://www.juggernautguild.com/public/min/index.php?f=public/style_css/css_4/calendar_select.css,public/style_css/css_4/ipb_styles.css,public/style_css/css_4/ipb_editor.css,public/style_css/css_4/juggernaut.css'
     = stylesheet_link_tag 'lootfactor'
     = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'
-    = javascript_include_tag 'jquery.ui', 'jquery.tablesorter.min', 'jquery.tooltip', 'jquery.autocomplete', 'jquery.contextmenu', :cache => 'jquery'
-    = javascript_include_tag 'jugg', 'jugg.autocomplete', 'jugg.tablesorter', :cache => 'application'
+    = javascript_include_tag 'jquery.ui', 'jquery.tablesorter.min', 'jquery.tooltip', 'jquery.autocomplete', :cache => 'jquery'
+    = javascript_include_tag 'jugg.core', 'jugg', 'jugg.autocomplete', 'jugg.tablesorter', :cache => 'application'
     - if admin?
       = javascript_include_tag 'jugg.admin'
     = javascript_include_tag 'http://static.wowhead.com/widgets/power.js'
