--- a/app/views/raids/index.html.haml
+++ b/app/views/raids/index.html.haml
@@ -1,8 +1,7 @@
 - breadcrumb 'Raids'
-= render :partial => 'raids/context_menu' if admin?
 = will_paginate @raids
 %div.category_block.block_wrap
-  = maintitle
+  = render :partial => 'shared/maintitle'
   %table.ipb_table
     %thead
       %tr
@@ -13,7 +12,9 @@
     %tbody
       - @raids.each do |raid|
         %tr{ :class => cycle('row1', 'row2') }
-          %td.date= link_to h(raid.date), raid_path(raid)
+          %td.date
+            = link_to h(raid.date), raid_path(raid)
+            = render :partial => 'shared/moderation', :object => raid if admin?
           %td.number= h(raid.attendees.size)
           %td.number= h(raid.loots.size)
           %td.note= h(raid.note)
