Update the core CRUD forms. God I love Formtastic.

--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,17 +1,11 @@
-= form.label :name
-= form.text_field :name
-
-= form.label :wow_id, "WoW ID"
-= form.text_field :wow_id, :class => 'small'
-
-= form.label :color
-= form.text_field :color, :class => 'small'
-
-= form.label :icon
-= form.text_field :icon
-
-= form.label :slot
-= form.text_field :slot
-
-= form.label :level
-= form.text_field :level, :class => 'small'
+- form.inputs do
+  = form.input :name
+  = form.input :wow_id, :as => :string, :label => 'WoW ID'
+  = form.input :color, :required => false
+  = form.input :icon, :required => false
+  = form.input :slot, :required => false
+  = form.input :level, :required => false
+- form.buttons :class => 'submit' do
+  = form.submit 'Save Item', :class => 'input_submit'
+  or
+  = link_to('Cancel', items_path, :class => 'cancel')
