--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,12 +1,3 @@
 - breadcrumb link_to('Members', members_path), 'New'
 - semantic_form_for @member do |form|
-  - form.inputs do
-    = form.input :name
-    = form.input :wow_class, :as => :select, :collection => Member::WOW_CLASSES, :label => 'Class'
-    = form.input :rank_id, :as => :select, :collection => @ranks.collect { |r| [r.name, r.id] }, :include_blank => true, :required => false
-    = form.input :user_id, :as => :select, :collection => @users.collect { |u| [u.name, u.id] }, :include_blank => true, :required => false
-    = form.input :active, :as => :boolean
-  - form.buttons :class => 'submit' do
-    = form.submit 'Save Member', :class => 'input_submit'
-    or
-    = link_to('Cancel', members_path, :class => 'cancel')
+  = render :partial => 'form', :object => form
