--- a/app/views/raids/new.html.haml
+++ b/app/views/raids/new.html.haml
@@ -1,14 +1,11 @@
-%h2= breadcrumb link_to('Raids', raids_path), 'New'
-%fieldset
-  - form_for @raid do |f|
-    - unless f.error_messages.empty?
-      .error= f.error_messages
-      
-    = render :partial => "form", :object => f
-
-    = f.label :loot_output, 'Loot'
-    = f.text_area :loot_output, :size => '60x15'
-    
-    .buttons
-      = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
-      = styled_button(:type => 'reset', :image => 'form_delete.png')
+- breadcrumb link_to('Raids', raids_path), 'New'
+- semantic_form_for @raid do |form|
+  - form.inputs do
+    = form.input :date_string, :label => 'Date'
+    = form.input :note, :required => false
+    = form.input :attendance_output, :as => :text, :label => 'Attendance', :input_html => {:size => '60x15'}
+    = form.input :loot_output, :as => :text, :label => 'Loot', :input_html => {:size => '60x15'}
+  - form.buttons :class => 'submit' do
+    = form.submit 'Add Raid', :class => 'input_submit'
+    or
+    = link_to('Cancel', raids_path, :class => 'cancel')
