--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -131,7 +131,46 @@ body#raids_root
             float: right
   #drops
     clear: left
+
+// Autocomplete ---------------------------------------------------------------
+.ac_results
+  padding: 0px
+  border: 1px solid black
+  background-color: white
+  overflow: hidden
+  z-index: 99999
+
+  ul
+    width: 100%
+    list-style-position: outside
+    list-style: none
+    padding: 0
+    margin: 0
+  
+  li
+    margin: 0px
+    padding: 2px 5px
+    cursor: default
+    display: block
+    font: menu
+    font-size: 12px
+    line-height: 16px
+    overflow: hidden
     
+    img
+      float: left
+      margin-right: 5px
+
+.ac_loading
+  background: white url(/images/indicator.gif) right center no-repeat
+
+.ac_odd
+  background-color: #eee
+
+.ac_over
+  background-color: #0A246A
+  color: white
+
 // Forms ----------------------------------------------------------------------
 @import formtastic_base.sass
 @import skintastic.sass
