--- a/app/views/wishlists/_form_inline.html.haml
+++ b/app/views/wishlists/_form_inline.html.haml
@@ -1,11 +1,10 @@
 #wishlist-new{ :style => "display: none" }
-  %fieldset
-    %legend.hide Add Wishlist Entry
-    #errors.error.hide
-    - remote_form_for :wishlist, @wishlist, :url => member_wishlists_path(@member), :html => { :method => :post } do |f|
-      = render :partial => 'wishlists/form', :object => f
-      .buttons
-        = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
-        = link_to_function(image_tag('cancel.png') + 'Cancel', "$('#wishlist-new').hide(); $('#wishlist-toggle').show()")
-#wishlist-toggle.buttons
-  = link_to_function(image_tag('add.png') + 'Add Entry', 'wishlistAddForm()')
+  %div.message.error.hide
+  - semantic_remote_form_for :wishlist, @wishlist, :url => member_wishlists_path(@member), :html => { :method => :post } do |form|
+    = render :partial => 'wishlists/form', :object => form
+    - form.buttons :class => 'submit' do
+      = form.submit 'Save', :class => 'input_submit'
+      or
+      = link_to_function('Cancel', "$('#wishlist-new').hide(); $('#wishlist-toggle').show()", :class => 'cancel')
+#wishlist-toggle
+  %fieldset.submit= link_to_function('Add Entry', 'wishlistAddForm()', :class => 'input_submit')
