--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -25,6 +25,12 @@ span.smaller
   
 div.message.success
   cursor: pointer
+div.message.error
+  .errorExplanation
+    ul
+      list-style-type: disc
+      li
+        margin-left: 15px
   
 noscript, #fourohfour, #fivehundred
   .error
@@ -211,6 +217,8 @@ body#wishlists_root
 @import skintastic.sass
 form
   +stack-form(nil)
+  .wishlist_priority
+    +float-inputs(20px, 1.4em)
   fieldset.submit
     padding: 15px 6px
     text-align: center
