--- a/app/views/members/_punishments.html.haml
+++ b/app/views/members/_punishments.html.haml
@@ -4,20 +4,15 @@
       %th.note Reason
       %th.date Expires
       %th.number Value
-      - if admin?
-        %th.image Actions
   %tbody
     - @punishments.each do |pun|
       %tr{ :class => cycle('row1', 'row2') }
-        %td.note= h(pun.reason)
+        %td.note
+          = h(pun.reason)
+          = render :partial => 'shared/moderation', :object => [@member, pun] if admin?
         %td.date
           = h(pun.expires.to_s(:db))
           = " (#{loot_factor_cutoff(pun.expires)})"
         %td.number= loot_factor(pun.value)
-        - if admin?
-          %td.image
-            = link_to image_tag('edit.png'), edit_member_punishment_path(@member, pun)
-            = link_to_delete(:path => member_punishment_path(@member, pun), :text => '')
 - if admin?
-  .buttons
-    = link_to image_tag('add.png') + 'Add Punishment', new_member_punishment_path(@member)
+  %fieldset.submit= link_to('Add Punishment', new_member_punishment_path(@member), :class => 'input_submit')
