--- a/app/views/punishments/edit.html.haml
+++ b/app/views/punishments/edit.html.haml
@@ -1,13 +1,3 @@
-%h2=breadcrumb link_to('Members', members_path), link_to_member(@member), 'Punishments', 'Edit'
-%fieldset
-  %legend.hide Edit Punishment
-  
-  - form_for @punishment, :url => member_punishment_path(@member, @punishment) do |f|
-    - unless f.error_messages.empty?
-      .error= f.error_messages
-      
-    = render :partial => 'form', :object => f
-    
-    .buttons
-      = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
-      = link_to_delete(:path => member_punishment_path(@member, @punishment))
+- breadcrumb link_to('Members', members_path), link_to_member(@member), 'Punishments', 'Edit'
+- semantic_form_for @punishment, :url => member_punishments_path(@member) do |form|
+  = render :partial => 'form', :object => form
