--- a/app/views/punishments/new.html.haml
+++ b/app/views/punishments/new.html.haml
@@ -1,13 +1,3 @@
-%h2=breadcrumb link_to('Members', members_path), link_to_member(@member), 'Punishments', 'New'
-%fieldset
-  %legend.hide New Punishment
-  
-  - form_for @punishment, :url => member_punishments_path(@member) do |f|
-    - unless f.error_messages.empty?
-      .error= f.error_messages
-      
-    = render :partial => 'form', :object => f
-    
-    .buttons
-      = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
-      = styled_button(:type => 'reset', :image => 'form_delete.png')
+- breadcrumb link_to('Members', members_path), link_to_member(@member), 'Punishments', 'New'
+- semantic_form_for @punishment, :url => member_punishments_path(@member) do |form|
+  = render :partial => 'form', :object => form
