--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -74,13 +74,13 @@
                 %ul#breadcrumb.left
                   = yield :breadcrumb
                 %ul#section_links.right
-                  %li= link_to 'Index', root_path, :class => ( current_page?(root_path) ) ? 'selected' : ''
+                  %li.first= link_to 'Index', root_path, :class => ( current_page?(root_path) ) ? 'selected' : ''
                   %li= link_to_controller(Achievement)
                   %li= link_to_controller(Member)
                   %li= link_to_controller(Raid, :admin_only => true)
                   %li= link_to_controller(Item)
                   %li= link_to_controller(Loot, :admin_only => true)
-                  %li= link_to_controller(Wishlist, :admin_only => true)
+                  %li.last= link_to_controller(Wishlist, :admin_only => true)
                 %br.clear
         #content.clear
           - if flash[:error]
