Re-style our error pages.

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -43,7 +43,7 @@ div.message.error
       li
         margin-left: 15px
   
-noscript, #fourohfour, #fivehundred
+noscript, #server_error
   .error
     margin: 100px auto
     padding: 75px 50px
