Use Google's jsapi.
Fix Members#show tabs, and add moderation when a tab is loaded or a page is changed.

--- a/app/views/members/_loots.html.haml
+++ b/app/views/members/_loots.html.haml
@@ -7,6 +7,7 @@
     $('#loots_pagination a').click(function() {
       $.get($(this).attr('href'), function(value) {
         $('#loots_pagination').parent().html(value);
+        setupModeration();
       });
       return false;
     });
