--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,8 +6,11 @@
     %link{ :rel => "shortcut icon", :href => 'http://www.juggernautguild.com/favicon.ico'}/
     = stylesheet_link_tag 'http://www.juggernautguild.com/public/min/index.php?f=public/style_css/css_4/calendar_select.css,public/style_css/css_4/ipb_styles.css,public/style_css/css_4/ipb_editor.css,public/style_css/css_4/juggernaut.css'
     = stylesheet_link_tag 'lootfactor'
-    = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'
-    = javascript_include_tag 'jquery.ui', 'jquery.tablesorter.min', 'jquery.tooltip', 'jquery.autocomplete', :cache => 'jquery'
+    %script{ :src => 'http://www.google.com/jsapi' }
+    :javascript
+      google.load('jquery', '1.3.2');
+      google.load('jqueryui', '1.7.2');
+    = javascript_include_tag 'jquery.tablesorter.min', 'jquery.tooltip', 'jquery.autocomplete', :cache => 'jquery_extras'
     = javascript_include_tag 'jugg.core', 'jugg', 'jugg.autocomplete', 'jugg.tablesorter', :cache => 'application'
     - if admin?
       = javascript_include_tag 'jugg.admin'
