--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,7 +1,8 @@
 :javascript
   $(document).ready(function(){
     $('#member_tabs').tabs({
-      cache: true
+      cache: true,
+      ajaxOptions: { success: setupModeration }
     });
   });
   
@@ -30,12 +31,12 @@
       
 %div.category_block.block_wrap
   #member_tabs
-    %ol.tab_bar.no_title.mini
-      %li.tab_toggle= link_to("Raids",        '#t-raids')
-      %li.tab_toggle= link_to("Loots",        member_path(@member) + '/t.loots')
-      %li.tab_toggle= link_to("Wishlist",     member_path(@member) + '/t.wishlist')
-      %li.tab_toggle= link_to('Achievements', member_path(@member) + '/t.achievements')
-      %li.tab_toggle= link_to("Punishments",  member_path(@member) + '/t.punishments')
+    %ul.tab_bar.no_title.mini
+      %li.tab_toggle= link_to(content_tag(:span, 'Raids'),        '#t-raids')
+      %li.tab_toggle= link_to(content_tag(:span, 'Loots'),        member_path(@member) + '/t.loots')
+      %li.tab_toggle= link_to(content_tag(:span, 'Wishlist'),     member_path(@member) + '/t.wishlist')
+      %li.tab_toggle= link_to(content_tag(:span, 'Achievements'), member_path(@member) + '/t.achievements')
+      %li.tab_toggle= link_to(content_tag(:span, 'Punishments'),  member_path(@member) + '/t.punishments')
     #t-raids= render :partial => 'members/raids'
     #t-loots
     #t-wishlist
