Override font-size for td.date

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -269,6 +269,8 @@ table.ipb_table
   th.date, td.date
     text-align: left
     min-width: 125px
+  td.date
+    font-size: 1em
   th.lootfactor, td.lootfactor
     text-align: right
     min-width: 50px
