Fix a Sass deprecation warning?

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -227,7 +227,7 @@ body#wishlists_root
 @import formtastic_base.sass
 @import skintastic.sass
 form
-  +stack-form(nil)
+  +stack-form
   .wishlist_priority
     +float-inputs(20px, 1.4em)
   fieldset.submit
