Hiding the main root of the board was a bad idea. Let's be less brute-force about enforcing Javascript.
Turns out Wowhead fucked up their shit, so comment that out for now.

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -43,7 +43,7 @@ div.message.error
       li
         margin-left: 15px
   
-noscript, #server_error
+#server_error
   .error
     margin: 100px auto
     padding: 75px 50px
@@ -54,6 +54,11 @@ noscript, #server_error
     border-color: #000000
     span
       font-size: 3em
+      
+noscript
+  .error
+    font-size: 1.5em
+    font-weight: bold
   
 // Tooltip --------------------------------------------------------------------
 #tooltip
