--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,20 +6,15 @@
     %link{ :rel => "shortcut icon", :href => 'http://www.juggernautguild.com/favicon.ico'}/
     = stylesheet_link_tag 'http://www.juggernautguild.com/public/min/index.php?f=public/style_css/css_4/calendar_select.css,public/style_css/css_4/ipb_styles.css,public/style_css/css_4/ipb_editor.css,public/style_css/css_4/juggernaut.css'
     = stylesheet_link_tag 'lootfactor'
-    %script{ :src => 'http://www.google.com/jsapi' }
-    :javascript
-      google.load('jquery', '1.3.2');
-      google.load('jqueryui', '1.7.2');
+    = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'
+    = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'
     = javascript_include_tag 'jquery.tablesorter.min', 'jquery.tooltip', 'jquery.autocomplete', :cache => 'jquery_extras'
     = javascript_include_tag 'jugg.core', 'jugg', 'jugg.autocomplete', 'jugg.tablesorter', :cache => 'application'
     - if admin?
       = javascript_include_tag 'jugg.admin'
-    = javascript_include_tag 'http://static.wowhead.com/widgets/power.js'
+    / = javascript_include_tag 'http://static.wowhead.com/widgets/power.js'
   %body.lf{ :id => "#{controller.controller_name}_root" }
-    %noscript
-      .error
-        %span This site makes extensive use of JavaScript. Please enable it to continue.
-    #ipbwrapper.hide
+    #ipbwrapper
       %h1= @page_title || page_title
       
       %p#content_jump
@@ -86,6 +81,8 @@
                   %li.last= link_to_controller(Wishlist, :admin_only => true)
                 %br.clear
         #content.clear
+          %noscript
+            .message.error This site makes extensive use of JavaScript. If you don't enable it, things won't work correctly.
           - if flash[:error]
             %div.message.error= flash[:error]
           - if flash[:success]
