Fix fieldset.submit padding

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -236,7 +236,7 @@ form
   .wishlist_priority
     +float-inputs(20px, 1.4em)
   fieldset.submit
-    padding: 15px 6px
+    padding: 15px 0 !important
     text-align: center
   input.update
     background: #e36d2c url(http://www.juggernautguild.com/public/style_images/splat/input_submit.png) repeat-x scroll 0 50%
