Override IPB setting the background-color for both tr and td. This was breaking jQuery's highlight effect.

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -8,6 +8,9 @@ ul#section_links
   li.last
     border-right: 0
     margin: 0
+    
+.row1 td, .row2 td
+  background-color: transparent !important
 
 // Override WoW class styling -------------------------------------------------
 .Death_Knight, .Death, .Knight, .Deathknight, .Druid, .Hunter, .Mage, .Paladin, .Shaman, .Priest, .Rogue, .Warlock, .Warrior
