Add Member and Item associations to LiveLoot.

--- a/app/views/attendance/loot/_loot_row.html.haml
+++ b/app/views/attendance/loot/_loot_row.html.haml
@@ -1,5 +1,4 @@
 %tr{ :class => cycle('row1', 'row2') }[loot_row]
-  %td
-    = loot_row.wow_id
-  %td= h(loot_row.member_name)
+  %td= link_to_item_with_stats(loot_row.item)
+  %td= link_to_member(loot_row.member)
   %td= loot_row.loot_type
