--- a/app/views/attendance/loots/_loot_row.html.haml
+++ b/app/views/attendance/loots/_loot_row.html.haml
@@ -2,3 +2,6 @@
   %td= link_to_item_with_stats(loot_row.item)
   %td= link_to_member(loot_row.member)
   %td= loot_row.loot_type
+  %td.image{ :width => "48px" }
+    = link_to_function(image_tag('edit.png'), "attendanceEditLoot(#{loot_row.id})")
+    = link_to_remote_delete(loot_row, :text => '', :url => live_raid_live_loot_path(loot_row.live_raid, loot_row))
