--- a/app/views/attendance/raids/show.html.haml
+++ b/app/views/attendance/raids/show.html.haml
@@ -4,6 +4,9 @@
   });
 
 - breadcrumb link_to('Attendance', live_raids_path), "#{@live_raid.status} Raid"
+
+- if @live_raid.status == 'Pending'
+  %div.message.error This raid has not yet been started.
 %div.category_block.block_wrap
   #attendance_tabs
     %ul.tab_bar.no_title.mini
@@ -23,3 +26,19 @@
               %td.icon= link_to_toggle_attendee(att)
               %td.number= att.active_minutes
     #t-loots
+      - semantic_remote_form_for :live_loot, LiveLoot.new, :url => live_raid_live_loot_path(@live_raid), :html => {:method => :put} do |form|
+        %div#form_errors.message.error.hide
+        - form.inputs do
+          = form.input :input_text, :as => :text, :label => 'Loots', :required => false, :input_html => {:size => '90x10'}
+        - form.buttons :class => 'submit' do
+          = form.submit 'Parse', :class => 'input_submit'
+      %div.category_block.block_wrap
+        %table.ipb_table
+          %thead
+            %tr
+              %th Name
+              %th Buyer
+              %th Notes
+              %th
+          %tbody#live_loots
+            = render :partial => 'attendance/loots/loot_row', :collection => @live_raid.loots
