Add a way to start a LiveRaid to the UI.

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -35,6 +35,9 @@ span.smaller
 .negative
   color = !negative_color
   
+div.message
+  a
+    text-decoration: none
 div.message.success
   cursor: pointer
   margin: 10px 0
