--- a/app/views/attendance/raids/show.html.haml
+++ b/app/views/attendance/raids/show.html.haml
@@ -6,7 +6,7 @@
 - breadcrumb link_to('Attendance', live_raids_path), "#{@live_raid.status} Raid"
 
 - if @live_raid.status == 'Pending'
-  %div.message.error This raid has not yet been started.
+  %div.message.error= "This raid has not yet been started. #{link_to('Click', start_live_raid_path(@live_raid))} to start."
 %div.category_block.block_wrap
   #attendance_tabs
     %ul.tab_bar.no_title.mini
