--- a/app/views/attendance/raids/show.html.haml
+++ b/app/views/attendance/raids/show.html.haml
@@ -26,19 +26,18 @@
               %td.icon= link_to_toggle_attendee(att)
               %td.number= att.active_minutes
     #t-loots
+      %table.ipb_table
+        %thead
+          %tr
+            %th Name
+            %th Buyer
+            %th Notes
+            %th
+        %tbody#live_loots
+          = render :partial => 'attendance/loots/loot_row', :collection => @live_raid.loots
+      %div#form_errors.message.error.hide
       - semantic_remote_form_for :live_loot, LiveLoot.new, :url => live_raid_live_loot_path(@live_raid), :html => {:method => :put} do |form|
-        %div#form_errors.message.error.hide
         - form.inputs do
-          = form.input :input_text, :as => :text, :label => 'Loots', :required => false, :input_html => {:size => '90x10'}
+          = form.input :input_text, :as => :text, :label => 'Add Loot', :required => false, :input_html => {:size => '90x10'}
         - form.buttons :class => 'submit' do
           = form.submit 'Parse', :class => 'input_submit'
-      %div.category_block.block_wrap
-        %table.ipb_table
-          %thead
-            %tr
-              %th Name
-              %th Buyer
-              %th Notes
-              %th
-          %tbody#live_loots
-            = render :partial => 'attendance/loots/loot_row', :collection => @live_raid.loots
